hojas de estilo compartidas

--- a/28314688/perfil.html
+++ b/28314688/perfil.html
@@ -3,78 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Maximiliano Barboza</title>
+  <link rel="stylesheet" href="../css/style.css">
   <link rel="icon" href="http://www.ciens.ucv.ve/portalasig2/favicon.ico" type="image/x-icon">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-    }
-
-    .wrapper {
-      display: flex;
-      align-items: stretch;
-      max-width: 900px;
-      margin: 30px auto;
-      gap: 5px;
-    }
-
-    .image-container {
-      border: 2px solid black;
-      border-top-left-radius: 60px;
-      overflow: hidden;
-      width: 180px;
-      height: auto;
-      flex-shrink: 0;
-    }
-
-    .profile-img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover; 
-      display: block;
-    }
-
-    .profile-container {
-      background-color: white;
-      border: 2px solid black;
-      box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.2);
-      padding: 20px;
-      flex: 1;
-    }
-
-    .name {
-      font-size: 24px;
-      color: orange;
-      font-weight: bold;
-    }
-
-    .description {
-      font-family: Georgia, serif;
-      font-style: italic;
-      margin: 10px 0;
-    }
-
-    .data {
-      display: flex;
-      font-size: 14px;
-      margin: 4px 0;
-    }
-
-    .label {
-      width: 270px;
-      font-weight: bold;
-      flex-shrink: 0;
-    }
-
-    a {
-      color: orange;
-      text-decoration: none;
-    }
-
-    a:visited {
-      color: red;
-    }
-  </style>
 </head>
 <body>
   <div class="wrapper">
