--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
         
         <ul class="student-list">
             <li>
-                <img src="28314688/28314688.jpg" alt="Foto estudiante">
-                <div>Maximiliano Barboza</div>
+                <a href="28314688/perfil.html" style="text-decoration: none; color: inherit;">
+                    <img src="28314688/28314688.jpg" alt="Foto estudiante">
+                    <div>Maximiliano Barboza</div>
+                </a>
             </li>
             <li>
                 <img src="dummy1/dummy.jpg" alt="Foto estudiante">
