--- a/28314688/perfil.html
+++ b/28314688/perfil.html
@@ -5,12 +5,14 @@
   <title>Maximiliano Barboza</title>
   <link rel="stylesheet" href="../css/style.css">
   <link rel="icon" href="http://www.ciens.ucv.ve/portalasig2/favicon.ico" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <div class="wrapper">
-    <div class="image-container">
-      <img class="profile-img" src="28314688.jpg" alt="Foto de Maximiliano Barboza">
-    </div>
+    <picture>
+      <source media="(max-width: 768px)" srcset="CEDULAPequena.jpg">
+      <img class="profile-img" src="CEDULAGrande.jpg" alt="Foto de Maximiliano Barboza">
+    </picture>
     <div class="profile-container">
       <div class="name">Maximiliano Barboza</div>
       <p class="description">
