--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul class="student-list">
             <li>
                 <a href="28314688/perfil.html" style="text-decoration: none; color: inherit;">
-                    <img src="28314688/28314688.jpg" alt="Foto estudiante">
+                    <img src="28314688/CEDULAGrande.jpg" alt="Foto estudiante">
                     <div>Maximiliano Barboza</div>
                 </a>
             </li>
