configuración desde javascript

--- a/perfil.html
+++ b/perfil.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="../css/style.css">
   <link rel="icon" href="http://www.ciens.ucv.ve/portalasig2/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="js/index.js" defer></script>
 </head>
 <body>
   <div class="wrapper">
@@ -14,16 +15,16 @@
       <img class="profile-img" src="CEDULAGrande.jpg" alt="Foto de Maximiliano Barboza">
     </picture>
     <div class="profile-container">
-      <div class="name">Maximiliano Barboza</div>
+      <div class="name"></div>
       <p class="description">
-        Estoy estudiando en la facultad de ciencias de la UCV, actualmente me encuentro en el 7mo semestre de la carrera, soy preparador de la materia Base de Datos. me gusta mucho el área de los datos y la Inteligencia Artificial, pero también me gusta el diseño web.
+        
       </p>
-      <div class="data"><span class="label">Mi color favorito es:</span> <span>Azul</span></div>
-      <div class="data"><span class="label">Mi libro favorito es:</span> <span>Los Juegos del Hambre</span></div>
-      <div class="data"><span class="label">Mi estilo de música preferida es:</span> <span>Reguetón y Pop</span></div>
-      <div class="data"><span class="label">Mis Video juegos favoritos son:</span> <span>FIFA y Uncharted</span></div>
-      <div class="data"><span class="label">Lenguajes aprendidos:</span> <span><b>c++, java, dart, python</b></span></div>
-      <p>Si necesitan comunicarse conmigo me pueden escribir a: <a href="mailto:maxibar2001@gmail.com">maxibar2001@gmail.com</a></p>
+      <div class="data"><span class="label color"></span> <span class="answer-color"></span></div>
+      <div class="data"><span class="label book"></span> <span class="answer-book"></span></div>
+      <div class="data"><span class="label music"></span> <span class="answer-music"></span></div>
+      <div class="data"><span class="label videogames"></span> <span class="answer-videogames"></span></div>
+      <div class="data"><span class="label programming"></span> <span class="answer-programming"><b></b></span></div>
+      <p class="mail"> <a href="mailto:maxibar2001@gmail.com" id="answer-mail"></a></p>
     </div>
   </div>
 </body>
