perfil con información dinámica

--- a/perfil.html
+++ b/perfil.html
@@ -11,8 +11,7 @@
 <body>
   <div class="wrapper">
     <picture>
-      <source media="(max-width: 768px)" srcset="CEDULAPequena.jpg">
-      <img class="profile-img" src="CEDULAGrande.jpg" alt="Foto de Maximiliano Barboza">
+      <img class="profile-img" src="" alt="Foto de estudiante">
     </picture>
     <div class="profile-container">
       <div class="name"></div>
@@ -24,7 +23,7 @@
       <div class="data"><span class="label music"></span> <span class="answer-music"></span></div>
       <div class="data"><span class="label videogames"></span> <span class="answer-videogames"></span></div>
       <div class="data"><span class="label programming"></span> <span class="answer-programming"><b></b></span></div>
-      <p class="mail"> <a href="mailto:maxibar2001@gmail.com" id="answer-mail"></a></p>
+      <p class="mail"></p> <a href="#" class="answer-mail"></a>
     </div>
   </div>
 </body>
