--- a/perfil.html
+++ b/perfil.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Maximiliano Barboza</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="http://www.ciens.ucv.ve/portalasig2/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="js/index.js" defer></script>
+  <script src="js/perfil.js" defer></script>
 </head>
 <body>
   <div class="wrapper">
